add books add function and event

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </section>
 
     <form action="">
-        <input type="text" placeholder="title"><br><br>
-        <input type="text" placeholder="author"><br><br>
-        <input type="button" value="Add">
+        <input type="text" placeholder="title" id="title"><br><br>
+        <input type="text" placeholder="author" id="author"><br><br>
+        <input type="button" value="Add" id="add-book">
     </form>
 </body>
 </html>
