--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="main.js" defer></script>
-    <title>Awesome Books Prototype</title>
+    <title>Awesome Books</title>
 </head>
 <body>
     <h1>
-        Awesome Books Prototype
+        Awesome Books
     </h1>
-    <section class="book-list">
-    </section>
-
     <form action="">
         <input type="text" placeholder="title" id="title"><br><br>
         <input type="text" placeholder="author" id="author"><br><br>
