replace objects with classes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <h1>
         Awesome Books
     </h1>
+    <section class="books-list">
+
+    </section>
     <form action="">
-        <input type="text" placeholder="title" id="title"><br><br>
-        <input type="text" placeholder="author" id="author"><br><br>
+        <input type="text" placeholder="title" id="title" required><br><br>
+        <input type="text" placeholder="author" id="author" required><br><br>
         <input type="button" value="Add" id="add-book">
     </form>
 </body>
