--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
     <title>Awesome Books</title>
 </head>
@@ -11,6 +12,8 @@
     <h1>
         Awesome Books
     </h1>
+    <hr>
+    <h2>Add a new book</h2>
     <form action="">
         <input type="text" placeholder="title" id="title"><br><br>
         <input type="text" placeholder="author" id="author"><br><br>
