add navigation and contact page

--- a/index.html
+++ b/index.html
@@ -11,16 +11,37 @@
 </head>
 
 <body>
-    <h1>
-        Awesome Books
+    <nav class="nav">
+        <h1>
+            Awesome Books
+        </h1>
+        <a href="#list" class="list">List</a>
+        
+        <a href="#add-new" class="add-new">Add new</a>
+        <a href="#contact" class="contact-link">Contact</a>
+    </nav>
+    <h1 class="books-head">
+        All Awesome Books
     </h1>
-    <hr>
-    <h2>Add a new book</h2>
-    <form action="">
+    <form action="" class="form">
+        <h2>Add a new book</h2>
         <input type="text" placeholder="title" id="title"><br><br>
         <input type="text" placeholder="author" id="author"><br><br>
         <input type="button" value="Add" id="add-book">
     </form>
+    <section class="contact">
+        <h2>
+            Contact Information
+        </h2>
+        <p>
+            Do you have any questions or you just want to say "Hello"?<br> You can reach out to us
+        </p>
+        <ul>
+            <li>Our emails: </li>
+            <li>Our phone numbers: </li>
+            <li>Our Githubs: </li>
+        </ul>
+    </section>
 </body>
 
 </html>
