added evenlistener at global scope to switch between three section

--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
             Do you have any questions or you just want to say "Hello"?<br> You can reach out to us
         </p>
         <ul>
-            <li>Our emails: </li>
-            <li>Our phone numbers: </li>
-            <li>Our Githubs: </li>
+            <li>Our emails: sajibarafatsiddiqui@gmail.com</li>
+            <li>Our phone numbers: +8801814443983</li>
+            <li>Our Githubs: https://github.com/sajibarafatsiddiqui</li>
         </ul>
     </section>
+    <footer class="footer"><p>Copyright:</p></footer>
 </body>
 
 </html>
