style copyright section

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
         <h1>
             Awesome Books
         </h1>
-        <a href="#list" class="list">List</a>
-        
-        <a href="#add-new" class="add-new">Add new</a>
-        <a href="#contact" class="contact-link">Contact</a>
+        <div>
+            <a href="#list" class="list lined">List</a>
+            <a href="#add-new" class="add-new lined">Add new</a>
+            <a href="#contact" class="contact-link">Contact</a>
+        </div>
     </nav>
     <h1 class="books-head">
         All Awesome Books
@@ -37,9 +38,9 @@
             Do you have any questions or you just want to say "Hello"?<br> You can reach out to us
         </p>
         <ul>
-            <li>Our emails: sajibarafatsiddiqui@gmail.com</li>
-            <li>Our phone numbers: +8801814443983</li>
-            <li>Our Githubs: https://github.com/sajibarafatsiddiqui</li>
+            <li>Our emails: <br> sajibarafatsiddiqui@gmail.com <br>oalhassan847@gmail.com</li>
+            <li>Our phone numbers: <br> +8801814443983 <br>+233554374251</li>
+            <li>Our Githubs: <br> https://github.com/sajibarafatsiddiqui <br>https://github.com/flemton</li>
         </ul>
     </section>
     <footer class="footer"><p>Copyright:</p></footer>
