added date below nav section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="#contact" class="contact-link">Contact</a>
         </div>
     </nav>
+    <p id="date"></p>
     <h1 class="books-head">
         All Awesome Books
     </h1>
