align date to right and fix linter errors

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <li>Our Githubs: <br> https://github.com/sajibarafatsiddiqui <br>https://github.com/flemton</li>
         </ul>
     </section>
-    <footer class="footer"><p>Copyright:</p></footer>
+    <footer class="footer">
+        <p>Newton an Sajid &copy; 2023</p>
+    </footer>
 </body>
-
 </html>
