fix #2 comment by SFarida

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </h1>
     <form action="" class="form">
         <h2>Add a new book</h2>
-        <input type="text" placeholder="title" id="title"><br><br>
-        <input type="text" placeholder="author" id="author"><br><br>
-        <input type="button" value="Add" id="add-book">
+        <input type="text" placeholder="title" id="title" required><br><br>
+        <input type="text" placeholder="author" id="author" required><br><br>
+        <button id="add-book">Add</button>
     </form>
     <section class="contact">
         <h2>
@@ -45,7 +45,7 @@
         </ul>
     </section>
     <footer class="footer">
-        <p>Newton an Sajid &copy; 2023</p>
+        <p>Newton and Sajid &copy; 2023</p>
     </footer>
 </body>
 </html>
